--- a/discussion4.Rmd
+++ b/discussion4.Rmd
@@ -9,6 +9,8 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 ggplot(data=mpg, aes(x = class, y = cty))+
-  geom_jitter()
+  geom_jitter(aes(color = class), alpha = 0.5) +
+	labs(x = "Car class", y = "City gas mileage (mpg)")
+
 ```
 
