--- a/discussion4.Rmd
+++ b/discussion4.Rmd
@@ -2,7 +2,9 @@
 title: "disc_4"
 author: "Alyssa Kibbe"
 date: "10/27/2020"
-output: html_document
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -10,7 +12,8 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 ggplot(data=mpg, aes(x = class, y = cty))+
   geom_jitter(aes(color = class), alpha = 0.5) +
-	labs(x = "Car class", y = "City gas mileage (mpg)")
+	labs(x = "Car class", y = "City gas mileage (mpg)")+
+  theme_bw()
 
 ```
 
